--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,13 @@ htmlcov/
 # Temporary
 *.tmp
 *.log
-terraform.tfstate*
+
+
+# Terraform
 .terraform/
+*.tfstate
+*.tfstate.backup
 .terraform.lock.hcl
+
+# Docker
+.env
